complete temperature check project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="weather-status text-white text-center">
             <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
             <h1 id="city"></h1>
-            <h3 id="temp"><span></span>&deg;C</h3>
+            <h3 id="temp"><span></span></h3>
             <p id="date"></p>
             <h1 class="lead" id="weather-type"></h1>
         </div>
